Extend Blockchain Expo part from vj

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -103,7 +103,7 @@ Wroclaw (Poland) [meetup](https://twitter.com/Donmario/status/984141287707348992
 
 [BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with @scalarcapital team in Austin, USA.
 
-London [Blockchain Expo](https://twitter.com/decredproject/status/986642982194495488) ([video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc), more to come).
+Blockchain Expo, London: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([photo](https://twitter.com/decredproject/status/986642982194495488), [photo](https://twitter.com/NoahPierau/status/987115181024141312), [photo](https://twitter.com/NoahPierau/status/986925002833514497), [video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc)).
 
 First Decred meet-up in Hangzhou, China ([Slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073)).
 
