Clarify node count

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -29,7 +29,7 @@ By surprise Innosilicon [released](http://www.innosilicon.com/html/d9-miner/inde
 
 Hashrate reached new all time high near 4000 TH/s, followed by a sharp [drop](https://www.reddit.com/r/decred/comments/8doiuo/question_about_network_hashrate_and_mining/) to around 2300 TH/s and is now recovering. Could be ASICs shipping.
 
-There are 630 nodes per [dcred.eu](https://dcred.eu/nodeStats). 31 run version 1.2.0, meaning they are testing release candidate ahead of final release.
+There are 200 public listening nodes and 418 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). 31 nodes run version 1.2.0, meaning they are testing release candidate ahead of final release.
 
 Stake participation is solid 46% with 3.5 million DCR. 30-day average ticket price is 86.5 DCR.
 
