Lowercase slack, twitter, reddit for less distraction

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -6,7 +6,7 @@ Core software is heading to 1.2.0 release. If you can't wait to test upcoming fe
 
 The release process has changed. It used to be: call a set date, rush to make it, still miss some bugs and rush to make a bugfix release. Now it is: freeze feature set, post Release Candidate 1 (RC1) and let people start testing it, fix bugs and release RC2, repeat. An RC version with no apparent bugs becomes the final release. This new process removes a ton of pressure from developers (and traders) and outlines proper time for testing. As our primary consumer-facing product, Decrediton, is growing in features and complexity, more testing will be required for new releases.
 
-Politeia is "Getting close to a public beta of voting" ([Slack](https://decred.slack.com/archives/C0NRMDVMJ/p1523623105000168)). Decred plugin [merged](https://github.com/decred/politeia/pull/242), paywall and voting under development. Backend voting [works](https://twitter.com/decredproject/status/984518284757221376) on testnet via CLI.
+Politeia is "Getting close to a public beta of voting" ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1523623105000168)). Decred plugin [merged](https://github.com/decred/politeia/pull/242), paywall and voting under development. Backend voting [works](https://twitter.com/decredproject/status/984518284757221376) on testnet via CLI.
 
 Trezor support advanced with Decred PR [merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
 
@@ -16,10 +16,10 @@ Update from Obelisk:
 > taek: We got results back. They are more or less on line with the simulations\
 > I didn't realize this, but we don't get the real chips back for 3 more weeks. The ones we've been testing are hacked together into a DIP package (they are BGA chips) that really screws up the results\
 > There's a decent chance that the full bga chips perform better\
-> For the time being though, we're pretty much on track for the hashrates estimated on the website ([Slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203))
+> For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203))
 > 
 > taek: We are still on track [for June shipping of Obelisk]\
-> We're also at 80% confidence to hit 1500 GH/s ([Slack](https://decred.slack.com/archives/C3P6R055Z/p1524152532000581))
+> We're also at 80% confidence to hit 1500 GH/s ([slack](https://decred.slack.com/archives/C3P6R055Z/p1524152532000581))
 
 Halong: units are reportedly shipping. The amount of units was estimated 450-600 by community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) unboxing and shipping.
 
@@ -65,7 +65,7 @@ The Crypto Lawyers, a crypto exclusive U.S. law firm began accepting Decred ([di
 
 Great to see business owners heading directly to our chats.
 
-> emiliomann: VotoLegal, a brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizen, now uses DCRtime and Decred Blockchain ([Slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150), [Twitter](https://twitter.com/decred_br/status/986610826051276800)).
+> emiliomann: VotoLegal, a brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizen, now uses DCRtime and Decred Blockchain ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150), [twitter](https://twitter.com/decred_br/status/986610826051276800)).
 
 ## Partnerships
 
@@ -95,7 +95,7 @@ Wroclaw (Poland) [meetup](https://twitter.com/Donmario/status/984141287707348992
 
 Blockchain Expo, London: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([photo](https://twitter.com/decredproject/status/986642982194495488), [photo](https://twitter.com/NoahPierau/status/987115181024141312), [photo](https://twitter.com/NoahPierau/status/986925002833514497), [video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc)).
 
-First Decred meet-up in Hangzhou, China ([Slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073)).
+First Decred meet-up in Hangzhou, China ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073)).
 
 Decred's Jake Yocom-Piatt: Cutting the Head off the Snake hosted by the Cambridge Blockchain Meetup ([upcoming](https://www.bostonblockchainweek.com/events/2018/4/24/decreds-jake-yocom-piatt-cutting-the-head-off-the-snake)).
 
@@ -113,9 +113,9 @@ Interview with Decred’s Project Lead Jake Yocom-Piatt on Crypto Ad Bans and Ma
 
 ## Discussions
 
-A debate on protocol security and cost to attack ([Reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/)).
+A debate on protocol security and cost to attack ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/)).
 
-Very thoughtful discussion on how appropriate it is to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and association of unwanted materials to a decentralized project ([Slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), continued [here](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029)).
+Very thoughtful discussion on how appropriate it is to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and association of unwanted materials to a decentralized project ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), continued [here](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029)).
 
 A new #governance channel to discuss governance in Decred and other projects.
 
@@ -123,6 +123,6 @@ A new #governance channel to discuss governance in Decred and other projects.
 
 Bittrex finally opens registrations again.
 
-OOOBTC has unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) ([Reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/)).
+OOOBTC has unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/)).
 
 ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and Ethereum. Most opinions run back and forth between "resist or not resist", but some are recognizing Decred way, like [this](https://tokeneconomy.co/is-the-war-against-asics-worth-fighting-b12c6a714bed) excellent piece.
