--- a/posts/201804.md
+++ b/posts/201804.md
@@ -119,6 +119,8 @@ Very thoughtful discussion on how appropriate it is to use half naked photos in 
 
 A new #governance channel to discuss governance in Decred and other projects.
 
+[r/politeia](https://www.reddit.com/r/politeia/) subreddit was recovered for Decred community. Thanks to Tivra for filing the request. Politeia can bring a lot of value outside Decred so it well deserves its own sub.
+
 ## Relevant External
 
 Bittrex finally opens registrations again.
