--- a/posts/201804.md
+++ b/posts/201804.md
@@ -13,11 +13,12 @@ Trezor support advanced with Decred PR [merged](https://github.com/trezor/trezor
 ## ASICs
 
 Update from Obelisk:
+
 > taek: We got results back. They are more or less on line with the simulations\
 > I didn't realize this, but we don't get the real chips back for 3 more weeks. The ones we've been testing are hacked together into a DIP package (they are BGA chips) that really screws up the results\
 > There's a decent chance that the full bga chips perform better\
 > For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203))
-> 
+
 > taek: We are still on track [for June shipping of Obelisk]\
 > We're also at 80% confidence to hit 1500 GH/s ([slack](https://decred.slack.com/archives/C3P6R055Z/p1524152532000581))
 
@@ -41,13 +42,13 @@ emiliomann announced:
 
 > the launch of first BR exchange of altcoins with fiat market and totally within the laws of the Brazilian government. Decred will have the two markets DCR/BTC and DCR/BRL. It’s very difficult to fulfill all the legal requirements and get authorization to work with FIAT here.
 
-The exchange [turned](https://twitter.com/decredproject/status/984105841048436741) to be Profitfy. It is outstanding because it comes from @Rhama, Decred community member from day one. And it is innovative, using dcrtime for their blockchain ID via [Original My](https://originalmy.com).
+The exchange [turned](https://twitter.com/decredproject/status/984105841048436741) to be Profitfy. It is outstanding because it comes from @Rhama, Decred community member from day one. And it is innovative, using dcrtime for their blockchain ID login via [Original My](https://originalmy.com).
 
 Seeing this competition, another exchange Braziliex [launched](https://twitter.com/decredproject/status/984478905061928960) DCR/BRL and DCR/BTC pairs ahead of their plans only 2 hours after Profitfy.
 
 Not stopping there,
 
-> emiliomann: Hey guys, this is a poll of the biggest bitcoin exchange in brazil that is planning to open altcoins markets. Please, help the Brazilian community by voting for Decred! Just one click. Thank you! https://twitter.com/mercadobitcoin/status/981602483268194307
+> emiliomann: Hey guys, this is a poll of the biggest Bitcoin exchange in Brazil that is planning to open altcoins markets. Please, help the Brazilian community by voting for Decred! Just one click. Thank you! https://twitter.com/mercadobitcoin/status/981602483268194307
 
 Next, changenow.io, a non-custodian exchange for fast conversions [added](https://twitter.com/decredproject/status/981623403378454528) DCR.
 
@@ -59,13 +60,14 @@ i2Rav announced a new [trading desk](https://i2trading.com/) that will be offeri
 
 ## Adoption
 
-The Crypto Lawyers, a crypto exclusive U.S. law firm began accepting Decred ([discussion](https://www.reddit.com/r/decred/comments/8909x6/the_crypto_lawyers_a_crypto_exclusive_us_law_firm/)).
+The Crypto Lawyers, a crypto exclusive U.S. law firm began accepting Decred. ([reddit](https://www.reddit.com/r/decred/comments/8909x6/the_crypto_lawyers_a_crypto_exclusive_us_law_firm/))
 
 > RAurelius: I think that a law firm accepting Decred is a worthy distinction from other previously publicized companies that accept Decred for typical consumer products. Legal services are severely lacking in the Crypto-sphere, so the publicity is good for everyone in this arena.
 
 Great to see business owners heading directly to our chats.
 
-> emiliomann: VotoLegal, a brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizen, now uses DCRtime and Decred Blockchain ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150), [twitter](https://twitter.com/decred_br/status/986610826051276800)).
+> emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizen, now uses dcrtime and Decred blockchain.\
+> https://twitter.com/decred_br/status/986610826051276800 ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150))
 
 ## Partnerships
 
@@ -73,7 +75,7 @@ YBF Ventures and Decred announced partnership in building a blockchain-focused d
 
 > With the YBF Ventures partnership, Decred hopes to grow their Australian contractor network and scale their operations throughout the Asia-Pacific region. ([btcmanager.com](https://btcmanager.com/ybf-ventures-partners-with-the-decred-project-to-build-a-decentralized-internet/))
 
-> We specifically chose Decred for a more robust corporate partnership, and it is the first time that a decentralised autonomous organisation is partnering with a ‘traditional’ organisation in such a capacity. ([ybfventures.com](http://ybfventures.com/ybf-decred-partnership-web-3/)).
+> We specifically chose Decred for a more robust corporate partnership, and it is the first time that a decentralised autonomous organisation is partnering with a ‘traditional’ organisation in such a capacity. ([ybfventures.com](http://ybfventures.com/ybf-decred-partnership-web-3/))
 
 ## Marketing
 
@@ -93,29 +95,29 @@ Wroclaw (Poland) [meetup](https://twitter.com/Donmario/status/984141287707348992
 
 [BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with @scalarcapital team in Austin, USA.
 
-Blockchain Expo, London: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([photo](https://twitter.com/decredproject/status/986642982194495488), [photo](https://twitter.com/NoahPierau/status/987115181024141312), [photo](https://twitter.com/NoahPierau/status/986925002833514497), [video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc)).
+Blockchain Expo: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([photo](https://twitter.com/decredproject/status/986642982194495488), [photo](https://twitter.com/NoahPierau/status/987115181024141312), [photo](https://twitter.com/NoahPierau/status/986925002833514497), [video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc))
 
-First Decred meet-up in Hangzhou, China ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073)).
+First Decred meet-up in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
 
-Decred's Jake Yocom-Piatt: Cutting the Head off the Snake hosted by the Cambridge Blockchain Meetup ([upcoming](https://www.bostonblockchainweek.com/events/2018/4/24/decreds-jake-yocom-piatt-cutting-the-head-off-the-snake)).
+Decred's Jake Yocom-Piatt: Cutting the Head off the Snake hosted by the Cambridge Blockchain Meetup. ([upcoming](https://www.bostonblockchainweek.com/events/2018/4/24/decreds-jake-yocom-piatt-cutting-the-head-off-the-snake))
 
 ## Media
 
-[Second episode](https://www.youtube.com/watch?v=QzY27b2REwg) of Lightning Network educational series is out.
+Second episode of Lightning Network educational series is out. ([youtube](https://www.youtube.com/watch?v=QzY27b2REwg))
+
+A user’s perspective and introduction to blockchain governance ([Richard Red](https://medium.com/@richardred/a-users-perspective-and-introduction-to-blockchain-governance-80fbe2050222))
 
 Decred Looks Ahead: An Interview with Project Lead Jake Yocom-Piatt (Exclusive) ([sludgefeed.com](https://sludgefeed.com/decred-looks-ahead-an-interview-with-project-lead-jake-yocom-piatt/))
 
 How Complex Bitcoin Politics Led to the Creation of Decred ([btcmanager.com](https://btcmanager.com/how-complex-bitcoin-politics-led-to-the-creation-of-decred/))
 
-A user’s perspective and introduction to blockchain governance ([Richard Red](https://medium.com/@richardred/a-users-perspective-and-introduction-to-blockchain-governance-80fbe2050222))
-
 Interview with Decred’s Project Lead Jake Yocom-Piatt on Crypto Ad Bans and Market Volatility ([cryptoslate.com](https://cryptoslate.com/interview-with-decreds-ceo-jake-yocom-piatt/))
 
 ## Discussions
 
-A debate on protocol security and cost to attack ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/)).
+A debate on protocol security and cost to attack. ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/))
 
-Very thoughtful discussion on how appropriate it is to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and association of unwanted materials to a decentralized project ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), continued [here](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029)).
+Very thoughtful discussion on how appropriate it is to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and association of unwanted materials to a decentralized project. ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), continued [here](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029))
 
 A new #governance channel to discuss governance in Decred and other projects.
 
@@ -125,6 +127,6 @@ A new #governance channel to discuss governance in Decred and other projects.
 
 Bittrex finally opens registrations again.
 
-OOOBTC has unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/)).
+OOOBTC has unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/). ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/))
 
 ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and Ethereum. Most opinions run back and forth between "resist or not resist", but some are recognizing Decred way, like [this](https://tokeneconomy.co/is-the-war-against-asics-worth-fighting-b12c6a714bed) excellent piece.
