--- a/posts/201804.md
+++ b/posts/201804.md
@@ -10,6 +10,8 @@ Politeia is "Getting close to a public beta of voting" ([slack](https://decred.s
 
 Trezor support advanced with Decred PR [merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
 
+Website received a new sleek [exchanges](https://decred.org/exchanges/) page and many additions to a list of [contributors](https://decred.org/contributors/).
+
 ## ASICs
 
 Update from Obelisk:
