--- a/posts/201804.md
+++ b/posts/201804.md
@@ -68,6 +68,8 @@ The Crypto Lawyers, a crypto exclusive U.S. law firm began accepting Decred. ([r
 
 Great to see business owners heading directly to our chats.
 
+[VotoLegal](https://votolegal.com.br/) is [migrating](https://twitter.com/marco_peereboom/status/986699534888730624) from Ethereum to Decred blockchain:
+
 > emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizen, now uses dcrtime and Decred blockchain.\
 > https://twitter.com/decred_br/status/986610826051276800 ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150))
 
@@ -101,7 +103,9 @@ Blockchain Expo: Decred was well represented at this large-scale industry event 
 
 First Decred meet-up in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
 
-Decred's Jake Yocom-Piatt: Cutting the Head off the Snake hosted by the Cambridge Blockchain Meetup. ([upcoming](https://www.bostonblockchainweek.com/events/2018/4/24/decreds-jake-yocom-piatt-cutting-the-head-off-the-snake))
+Blockchain Sovereignty and Blockchain Integration for Businesses by Jake Yocom-Piatt at MIT Media Lab. ([event](https://events.technologyreview.com/presents/business-of-blockchain/2018), [twitter](https://twitter.com/DeCredBAB/status/988421816522891264), [reddit](https://www.reddit.com/r/decred/comments/8eds35/decred_team_at_the_mit_business_of_blockchain/))
+
+Cutting the Head off the Snake by Jake Yocom-Piatt, hosted by the Cambridge Blockchain Meetup. ([event](https://www.meetup.com/Cambridge-Blockchain/events/249275574/))
 
 ## Media
 
@@ -115,7 +119,9 @@ How Complex Bitcoin Politics Led to the Creation of Decred ([btcmanager.com](htt
 
 Interview with Decred’s Project Lead Jake Yocom-Piatt on Crypto Ad Bans and Market Volatility ([cryptoslate.com](https://cryptoslate.com/interview-with-decreds-ceo-jake-yocom-piatt/))
 
-## Discussions
+Decred’s Jonathan Zeppettini: The Industry Is Going To Be Displacing Wall Street ([blocktribune.com](http://blocktribune.com/decreds-jonathan-zeppettini-the-industry-is-going-to-be-displacing-wall-street/))
+
+## Community Discussions
 
 A debate on protocol security and cost to attack. ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/))
 
@@ -125,10 +131,14 @@ A new #governance channel to discuss governance in Decred and other projects.
 
 [r/politeia](https://www.reddit.com/r/politeia/) subreddit was recovered for Decred community. Thanks to Tivra for filing the request. Politeia can bring a lot of value outside Decred so it well deserves its own sub.
 
+## Markets
+
+OOOBTC showed unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) on April 10. ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/))
+
+On April 25 a wild rush took the price from BTC 0.00777 to 0.0177 in under 30 minutes on Poloniex. Majority volume this time is distributed across Poloniex, Bittrex, Upbit and OOOBTC. Discussions [here](https://www.reddit.com/r/decred/comments/8eq566/uh_wtf_just_happened/) and [here](https://www.reddit.com/r/Dcrtrader/comments/8eq5mm/holy_fing_hell_did_something_just_happen/).
+
 ## Relevant External
 
 Bittrex finally opens registrations again.
-
-OOOBTC has unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/). ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/))
 
 ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and Ethereum. Most opinions run back and forth between "resist or not resist", but some are recognizing Decred way, like [this](https://tokeneconomy.co/is-the-war-against-asics-worth-fighting-b12c6a714bed) excellent piece.
