Add ASIC and Markets updates

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -14,21 +14,26 @@ Website received a new sleek [exchanges](https://decred.org/exchanges/) page and
 
 ## ASICs
 
-Update from Obelisk:
+Updates from Obelisk's Taek:
 
-> taek: We got results back. They are more or less on line with the simulations\
+> We got results back. They are more or less on line with the simulations\
 > I didn't realize this, but we don't get the real chips back for 3 more weeks. The ones we've been testing are hacked together into a DIP package (they are BGA chips) that really screws up the results\
 > There's a decent chance that the full bga chips perform better\
-> For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203))
+> For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203), Apr 12)
 
-> taek: We are still on track [for June shipping of Obelisk]\
-> We're also at 80% confidence to hit 1500 GH/s ([slack](https://decred.slack.com/archives/C3P6R055Z/p1524152532000581))
+Thank you for updating us on our own #pow-mining channel, let's hope more manufacturer representatives follow.
+
+> We're still on track for batch 1. We've ordered most of the parts we'll need, including the chips. We've got working chips, we've got test boards, test units, test everything. We've signed manufacturers to produce everything. Obelisk is going strong. ([reddit](https://www.reddit.com/r/siacoin/comments/8edjy8/obelisk_batch_1_updates/dxuoayz/), Apr 23)
 
 Fellow Sia miners are [discussing](https://www.reddit.com/r/siacoin/comments/8eo1x5/first_look_at_obelisk_unit/) the design of Obelisk SC1 case.
 
-Halong: units are reportedly shipping. The amount of units was estimated 450-600 by community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) unboxing and shipping.
+Halong: B29 units are reportedly shipping. The amount of units in first batch was estimated 450-600 by our community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) unboxing and shipping.
 
-By surprise Innosilicon [released](http://www.innosilicon.com/html/d9-miner/index.html) D9 DecredMaster ASIC with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29. Expected shipping date April 28-30. Discussion [here](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/). As always, DYOR.
+By surprise Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company maintains their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
+
+Just 9 days later Innosilicon [announces](https://twitter.com/Inno_Miner/status/990117591141134336) second batch with delivery on May 7-11 and same price of $6800. By coincidence (\*cough\*) Halong B29 is [available](https://halongmining.com/shop/dragonmint-b29-blake256-miner/) again, this time $200 cheaper than Inno and delivery May 21-30. ([reddit](https://www.reddit.com/r/decred/comments/8fk2ao/decred_miners_back_in_stock_from_inno_and/))
+
+As always, DYOR.
 
 ## Network
 
@@ -143,7 +148,9 @@ A new #governance channel was created to discuss governance in Decred and other 
 
 ## Markets
 
-OOOBTC showed unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) on April 10. ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/))
+In April Decred showed a confident recovery after previous months. DCR/USD moved from below $40 to nearly $90 and the more liquid DCR/BTC from 0.0058 to 0.0093.
+
+OOOBTC showed unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) of $19 m on April 10 ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/)), it went back to normal 2 weeks later.
 
 On April 25 a wild rush took the price from BTC 0.00777 to 0.0177 in under 30 minutes on Poloniex. Majority volume this time was distributed across Poloniex, Bittrex, Upbit and OOOBTC. Discussions [here](https://www.reddit.com/r/decred/comments/8eq566/uh_wtf_just_happened/) and [here](https://www.reddit.com/r/Dcrtrader/comments/8eq5mm/holy_fing_hell_did_something_just_happen/).
 
