Add 2 videos, expand Slack invite page

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -122,6 +122,8 @@ A user’s perspective and introduction to blockchain governance ([Richard Red](
 
 The Importance of Governance: Analyzing the Aftermath of the Monero Hard Fork by Noah Pierau ([btcmanager.com](https://btcmanager.com/the-importance-of-governance-analyzing-the-aftermath-of-the-monero-hard-fork/))
 
+The Crypto Show w/ Marco from Decred ([youtube](https://www.youtube.com/watch?v=08g-8G-Ao4I))
+
 Interview with Jake at @Blockchain_Expo by Crypto Coin Growth ([youtube](https://www.youtube.com/watch?v=sPHgaJAli1M))
 
 Interview with Jake at @Blockchain_Expo by Cryptocurrency Academy ([youtube](https://www.youtube.com/watch?v=mYrwXQsc8yU))
@@ -138,6 +140,8 @@ On Chain VS. Off Chain Governance: The Ins And Outs ([coinjournal.net](https://c
 
 Decred: On true decentralisation, Bitcoin communities, and avoiding the ICO route \[Video\] ([blockchaintechnology-news.com](https://www.blockchaintechnology-news.com/2018/04/26/decred-on-true-decentralisation-bitcoin-communities-and-avoiding-the-ico-route-video/))
 
+Marco in shitcoin talk episode 54 ([youtube](https://www.youtube.com/watch?v=o5BPqBeARbQ&t=3183s))
+
 ## Community Discussions
 
 A debate on protocol security and cost to attack. ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/))
@@ -148,7 +152,7 @@ A new #governance channel was created to discuss governance in Decred and other 
 
 [r/politeia](https://www.reddit.com/r/politeia/) subreddit was recovered for Decred community. Thanks to Tivra for filing the request. Politeia can bring a lot of value outside Decred so it well deserves its own sub.
 
-A new Slack [invite page](https://slack.decred.org/) has been [setup](https://twitter.com/decredproject/status/990282234471989248).
+A new Slack [invite page](https://slack.decred.org/) has been [setup](https://twitter.com/decredproject/status/990282234471989248) and onboarded 40 people in 48 hours.
 
 ## Markets
 
