Add StackExchange site closure

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -154,6 +154,8 @@ A new #governance channel was created to discuss governance in Decred and other 
 
 A new Slack [invite page](https://slack.decred.org/) has been [setup](https://twitter.com/decredproject/status/990282234471989248) and onboarded 40 people in 48 hours.
 
+Decred StackExchange site [proposal](https://area51.stackexchange.com/proposals/115865/decred) was closed due to inactivity in a 7 day period, according to Area 51 [rules](https://area51.meta.stackexchange.com/questions/20966/minimum-activity-requirements-for-area-51).
+
 ## Markets
 
 In April Decred showed a confident recovery after previous months. DCR/USD moved from below $40 to nearly $90 and the more liquid DCR/BTC from 0.0058 to 0.0093.
