--- a/posts/201804.md
+++ b/posts/201804.md
@@ -6,7 +6,7 @@ Wallet and node software version 1.2.0 has been released. Decrediton wallet high
 
 The release process has seen an introduction of Release Candidates. It used to be: announce release date, rush to meet it and miss bugs. Now it is: don't call release date, post Release Candidate 1 (RC1) and let people start testing it, fix bugs and release RC2, repeat. An RC version with no apparent bugs becomes the final release. This new process removes a ton of pressure from developers and users and gives more time for testing. As our primary consumer-facing product, Decrediton, is growing in features and complexity, more testing will be required for new releases.
 
-Politeia is "Getting close to a public beta of voting" ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1523623105000168)). Decred plugin [merged](https://github.com/decred/politeia/pull/242), paywall and voting under development. Backend voting [works](https://twitter.com/decredproject/status/984518284757221376) on testnet via CLI.
+Politeia is "Getting close to a public beta of voting" ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1523623105000168)). Decred plugin [merged](https://github.com/decred/politeia/pull/242), paywall and voting in testing stage. Backend voting [works](https://twitter.com/decredproject/status/984518284757221376) on testnet via CLI.
 
 Trezor support advanced with Decred PR [merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
 
@@ -31,21 +31,21 @@ Halong: B29 units are reportedly shipping. The amount of units in first batch wa
 
 By surprise Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company maintains their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
 
-Just 9 days later Innosilicon [announces](https://twitter.com/Inno_Miner/status/990117591141134336) second batch with delivery on May 7-11 and same price of $6800. At the same time Halong B29 is [available](https://halongmining.com/shop/dragonmint-b29-blake256-miner/) again, this time $200 cheaper than Inno and delivery May 21-30. ([reddit](https://www.reddit.com/r/decred/comments/8fk2ao/decred_miners_back_in_stock_from_inno_and/))
+Just 9 days later Innosilicon [announced](https://twitter.com/Inno_Miner/status/990117591141134336) second batch with delivery on May 7-11 and same price of $6800. At the same time Halong B29 is [available](https://halongmining.com/shop/dragonmint-b29-blake256-miner/) again, this time $200 cheaper than Inno and delivery May 21-30. ([reddit](https://www.reddit.com/r/decred/comments/8fk2ao/decred_miners_back_in_stock_from_inno_and/))
 
 As always, DYOR.
 
 ## Network
 
-Hashrate: April started at 2.0-2.7 PH/s range and seen a general rise with some big [fluctuations](https://www.reddit.com/r/decred/comments/8doiuo/question_about_network_hashrate_and_mining/) with lows at 2.2 and new all time high above 5.2 PH/s.
+Hashrate: April started at 2.0-2.7 PH/s range and seen a general increase with some big [fluctuations](https://www.reddit.com/r/decred/comments/8doiuo/question_about_network_hashrate_and_mining/) between lows at 2.2 and new all time high above 5.2 PH/s.
 
-There are 200 public listening nodes and 418 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). 31 nodes run version 1.2.0, meaning they are testing release candidate ahead of final release.
+Nodes: there are 200 public listening and 500 normal nodes per [dcred.eu](https://dcred.eu/nodeStats) as of May 1. 169 nodes already upgraded to version 1.2.0. Some 30 nodes were observed to be testing Release Candidate versions before the final release.
 
-Ticket price 30-day average has seen a steady rise to 87.1 DCR. Stake participation is solid 46.1% with 3.51 million DCR.
+Ticket price 30-day average has seen a steady rise to 87.5 DCR. Stake participation is solid 46.1% with 3.53 million DCR as of May 1.
 
 ## Integrations
 
-Brazilian community made a strong push of integrations this month.
+Brazilian community did a strong push of integrations this month.
 
 emiliomann announced:
 
@@ -176,6 +176,6 @@ On April 25 a wild rush took the price from BTC 0.00777 to 0.0177 in under 30 mi
 
 ## Relevant External
 
-Bittrex finally opens registrations again.
+Bittrex finally opened registrations again.
 
 ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and Ethereum. Most opinions run back and forth between "resist or not resist", but some are recognizing Decred way, like [this](https://tokeneconomy.co/is-the-war-against-asics-worth-fighting-b12c6a714bed) excellent piece.
