Remove weird character

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -65,7 +65,7 @@ Finally,
 
 Next, changenow.io, a non-custodian exchange for fast conversions [added](https://twitter.com/decredproject/status/981623403378454528) DCR.
 
-> michae2xl: ‪Decred is now available on @ezBtcCanada - an exchange with trading pairs DCR/CAD. From Toronto - https://www.ezbtc.ca/trade/alt-coins
+> michae2xl: Decred is now available on @ezBtcCanada - an exchange with trading pairs DCR/CAD. From Toronto - https://www.ezbtc.ca/trade/alt-coins
 
 i2Rav announced a new [trading desk](https://i2trading.com/) that will be offering DCR/EUR pair.
 
