Add exchanges spreadsheet, minor fixes

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -49,9 +49,7 @@ Ticket price 30-day average has seen a steady rise to 87.5 DCR. Stake participat
 
 Brazilian community did a strong push of integrations this month.
 
-emiliomann announced:
-
-> the launch of first BR exchange of altcoins with fiat market and totally within the laws of the Brazilian government. Decred will have the two markets DCR/BTC and DCR/BRL. It’s very difficult to fulfill all the legal requirements and get authorization to work with FIAT here.
+> emiliomann: On April 2nd @Rhama will launch the first BR exchange of altcoins with fiat market and totally within the laws of the Brazilian government. Decred will have the two markets DCR/BTC and DCR/BRL. It’s very difficult to fulfill all the legal requirements and get authorization to work with FIAT here.
 
 The exchange [turned](https://twitter.com/decredproject/status/984105841048436741) to be Profitfy. It is outstanding because it comes from @Rhama, Decred community member from day one. And it is innovative, using dcrtime for their blockchain ID login via [Original My](https://originalmy.com).
 
@@ -65,13 +63,15 @@ Finally,
 
 > viniciusfrias: We're excited to announce PagueCripto.com, a Brazilian crypto-to-fiat payment gateway which accepts Decred among other cryptocurrencies for Brazilians to pay daily bills, such as credit cards, energy, rent, etc, and also to make local bank transfers. Our service is both a web platform and an Android app, and as our community is relevant in Brazil, we are offering a discount coupon (50%) in service fees using DCR until May 14, 2018. Check it out at [paguecripto.com](https://www.paguecripto.com/) and in Google Play Store. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1525043419000038))
 
-Next, changenow.io, a non-custodian exchange for fast conversions [added](https://twitter.com/decredproject/status/981623403378454528) DCR.
+[changenow.io](https://changenow.io/), a non-custodian exchange for fast conversions [added](https://twitter.com/decredproject/status/981623403378454528) DCR.
 
-> michae2xl: Decred is now available on @ezBtcCanada - an exchange with trading pairs DCR/CAD. From Toronto - https://www.ezbtc.ca/trade/alt-coins
+> michae2xl: Decred is now available on [@ezBtcCanada](https://twitter.com/ezBtcCanada) — an exchange with DCR/CAD trading pair. From Toronto — https://www.ezbtc.ca/trade/alt-coins
 
 i2Rav announced a new [trading desk](https://i2trading.com/) that will be offering DCR/EUR pair.
 
 > Eventually we hope to offer the pair in GBP and YEN as well
+
+Note that there is a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) with all known exchanges supporting Decred, many are absent from coinmarketcap.
 
 ## Adoption
 
@@ -83,7 +83,7 @@ Great to see business owners reaching us directly in chat.
 
 [VotoLegal](https://votolegal.com.br/) is [migrating](https://twitter.com/marco_peereboom/status/986699534888730624) from Ethereum to Decred blockchain:
 
-> emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizen, now uses dcrtime and Decred blockchain.\
+> emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizens, now uses dcrtime and Decred blockchain.\
 > https://twitter.com/decred_br/status/986610826051276800 ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150))
 
 ## Partnerships
@@ -164,9 +164,9 @@ Marco in shitcoin talk episode 54 ([youtube](https://www.youtube.com/watch?v=o5B
 
 A debate on protocol security and cost to attack. ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/))
 
-Very thoughtful discussion on how appropriate it is to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and association of unwanted materials to a decentralized project. ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), continued [here](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029))
+Very thoughtful discussion on how appropriate it is to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and association of unwanted materials to a decentralized project. ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), [continued](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029))
 
-A new #governance channel was created to discuss governance in Decred and other projects.
+A new [#governance](https://decred.slack.com/messages/CAAMEU56W/) channel was created to discuss governance in Decred and other projects.
 
 [r/politeia](https://www.reddit.com/r/politeia/) subreddit was recovered for Decred community. Thanks to Tivra for filing the request. Politeia can bring a lot of value outside Decred so it well deserves its own sub.
 
