--- a/posts/201804.md
+++ b/posts/201804.md
@@ -2,7 +2,7 @@
 
 ## Development
 
-Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0).
+Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0). Note: for Decrediton use [1.2.1](https://github.com/decred/decred-binaries/releases/tag/v1.2.1) bugfix release.
 
 The release process has seen an introduction of Release Candidates. It used to be: announce release date, rush to meet it and miss bugs. Now it is: don't call release date, post Release Candidate 1 (RC1) and let people start testing it, fix bugs and release RC2, repeat. An RC version with no apparent bugs becomes the final release. This new process removes a ton of pressure from developers and users and gives more time for testing. As our primary consumer-facing product, Decrediton, is growing in features and complexity, more testing will be required for new releases.
 
@@ -14,6 +14,8 @@ WooCommerce [Decred plugin](https://github.com/xifrat/decred-woocommerce-plugin)
 
 Website received a new sleek [exchanges](https://decred.org/exchanges/) page and many additions to a list of [contributors](https://decred.org/contributors/).
 
+Dev activity stats for April: 152 active PRs, 125 commits, 21,656 added and 10,288 deleted lines spread across 7 repositories done by 2-7 developers per repository. ([chart](https://twitter.com/decredproject/status/991734153631563776))
+
 ## ASICs
 
 Updates from Obelisk's Taek:
@@ -23,15 +25,15 @@ Updates from Obelisk's Taek:
 > There's a decent chance that the full bga chips perform better\
 > For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203), Apr 12)
 
-Thank you for updating us on our own #pow-mining channel, let's hope more manufacturer representatives follow.
+Thank you for updating us on our #pow-mining channel, let's hope other ASIC manufacturers also join.
 
 > We're still on track for batch 1. We've ordered most of the parts we'll need, including the chips. We've got working chips, we've got test boards, test units, test everything. We've signed manufacturers to produce everything. Obelisk is going strong. ([reddit](https://www.reddit.com/r/siacoin/comments/8edjy8/obelisk_batch_1_updates/dxuoayz/), Apr 23)
 
 Fellow Sia miners are [discussing](https://www.reddit.com/r/siacoin/comments/8eo1x5/first_look_at_obelisk_unit/) the design of Obelisk SC1 case.
 
-Halong: B29 units are reportedly shipping. The amount of units in first batch was estimated 450-600 by our community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) unboxing and shipping.
+Halong: B29 units are shipping. The amount of units in first batch was estimated 450-600 by our community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) shipping and running the miners.
 
-By surprise Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company maintains their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
+By surprise Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company is active on their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
 
 Just 9 days later Innosilicon [announced](https://twitter.com/Inno_Miner/status/990117591141134336) second batch with delivery on May 7-11 and same price of $6800. At the same time Halong B29 is [available](https://halongmining.com/shop/dragonmint-b29-blake256-miner/) again, this time $200 cheaper than Inno and delivery May 21-30. ([reddit](https://www.reddit.com/r/decred/comments/8fk2ao/decred_miners_back_in_stock_from_inno_and/))
 
@@ -71,7 +73,7 @@ i2Rav announced a new [trading desk](https://i2trading.com/) that will be offeri
 
 > Eventually we hope to offer the pair in GBP and YEN as well
 
-Note that there is a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) with all known exchanges supporting Decred, many are absent from coinmarketcap.
+You can see all exchanges known to support Decred in a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) maintained by snr01. Many of them are absent from coinmarketcap.
 
 ## Adoption
 
@@ -96,11 +98,11 @@ YBF Ventures and Decred announced partnership in building a blockchain-focused d
 
 ## Marketing
 
-From Dustorf, who joined on the marketing front and is conducting a brand discovery analysis:
+Dustorf joined on the marketing front and is conducting a brand discovery analysis:
 
 > Decred is soliciting the input of our user community. In order to better understand you, what you think of Decred, and where you would like it to focus its efforts, we've come up with a short (4 minute) survey. Your input of all varieties is most appreciated https://www.surveymonkey.com/r/2LHK3FV
 
-March Targeted Advertising monthly report [released](https://www.reddit.com/r/decred/comments/89ix5g/decred_targeted_advertising_monthly_report/), reach @timhebel for full version.
+April targeted advertising report [released](https://www.reddit.com/r/decred/comments/8gkr4k/this_months_targeted_advertising_report_for_decred/) (previous March report [here](https://www.reddit.com/r/decred/comments/89ix5g/decred_targeted_advertising_monthly_report/)). Reach @timhebel for full version.
 
 The iconic "Not Overly Scammy" t-shirt by cryptograffiti is [available](https://cryptograffiti.com/products/not-overly-scammy?variant=12571550777386) for purchase. For those wondering, the meme [originates](https://twitter.com/jz_bz/status/980158995003568129) from @fluffypony.
 
@@ -108,19 +110,19 @@ Some hilarious promos by @jackliv3r: [one](https://twitter.com/jackliv3r/status/
 
 ## Events
 
-Australia community [event](https://twitter.com/YBFVentures/status/984020375670546434) at YBF Ventures.
+Community [event](https://twitter.com/YBFVentures/status/984020375670546434) at YBF Ventures in Australia.
 
-Wroclaw (Poland) [meetup](https://twitter.com/Donmario/status/984141287707348992).
+[Meetup](https://twitter.com/Donmario/status/984141287707348992) in Wroclaw, Poland.
 
-[BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with @scalarcapital team in Austin, USA.
+[BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with [@scalarcapital](https://twitter.com/@scalarcapital) team in Austin, USA.
 
-Blockchain Expo: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc), photo [1](https://twitter.com/decredproject/status/986642982194495488) [2](https://twitter.com/NoahPierau/status/987115181024141312) [3](https://twitter.com/NoahPierau/status/986925002833514497))
+Blockchain Expo in London, UK. Decred was well represented at this large-scale industry event. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc), photo [1](https://twitter.com/decredproject/status/986642982194495488) [2](https://twitter.com/NoahPierau/status/987115181024141312) [3](https://twitter.com/NoahPierau/status/986925002833514497))
 
-First Decred meet-up in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
+First Decred meetup in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
 
-Blockchain Sovereignty and Blockchain Integration for Businesses by Jake Yocom-Piatt at MIT Media Lab. ([event](https://events.technologyreview.com/presents/business-of-blockchain/2018), [reddit](https://www.reddit.com/r/decred/comments/8eds35/decred_team_at_the_mit_business_of_blockchain/), photo [1](https://twitter.com/DeCredBAB/status/988421816522891264) [2](https://twitter.com/DeCredBAB/status/988469881371799552) [3](https://twitter.com/marco_peereboom/status/988492457896742913))
+Business of Blockchain at MIT Media Lab in Cambridge, USA. Presentation: Blockchain Sovereignty and Blockchain Integration for Businesses by Jake Yocom-Piatt. ([event](https://events.technologyreview.com/presents/business-of-blockchain/2018), [reddit](https://www.reddit.com/r/decred/comments/8eds35/decred_team_at_the_mit_business_of_blockchain/), photo [1](https://twitter.com/DeCredBAB/status/988421816522891264) [2](https://twitter.com/DeCredBAB/status/988469881371799552) [3](https://twitter.com/marco_peereboom/status/988492457896742913))
 
-Cutting the Head off the Snake by Jake Yocom-Piatt, hosted by the Cambridge Blockchain Meetup. ([event](https://www.meetup.com/Cambridge-Blockchain/events/249275574/))
+Cambridge Blockchain Meetup in Cambridge, USA. Talk: Cutting the Head off the Snake by Jake Yocom-Piatt. ([event](https://www.meetup.com/Cambridge-Blockchain/events/249275574/), photo [1](https://twitter.com/DeCredBAB/status/988925370895405058) [2](https://twitter.com/TunnelMoney/status/988927248911790081) [3](https://twitter.com/blockchainwk/status/988936192187092992))
 
 Upcoming events:
 
@@ -129,6 +131,7 @@ Upcoming events:
 * [Decred Polska](https://www.meetup.com/Decred-Polska/events/250167470/) in Katowice, Poland on May 8
 * [Austin Hispanic Hackers Meetup](https://www.meetup.com/Austin-Hispanic-Hackers-Meetup/events/250188481/) in Austin, USA on May 9
 * [Consensus 2018](https://www.coindesk.com/events/consensus-2018/) in New York, USA on May 14-16
+* Madison Blockchain Meetup in Madison, USA on May 21
 
 ## Media
 
