--- a/posts/201804.md
+++ b/posts/201804.md
@@ -108,19 +108,19 @@ Some hilarious promos by @jackliv3r: [one](https://twitter.com/jackliv3r/status/
 
 ## Events
 
-Australia community [event](https://twitter.com/YBFVentures/status/984020375670546434) at YBF Ventures.
+Community [event](https://twitter.com/YBFVentures/status/984020375670546434) at YBF Ventures in Australia.
 
-Wroclaw (Poland) [meetup](https://twitter.com/Donmario/status/984141287707348992).
+[Meetup](https://twitter.com/Donmario/status/984141287707348992) in Wroclaw, Poland.
 
-[BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with @scalarcapital team in Austin, USA.
+[BBQ](https://twitter.com/marco_peereboom/status/984525046738771968) with [@scalarcapital](https://twitter.com/@scalarcapital) team in Austin, USA.
 
-Blockchain Expo: Decred was well represented at this large-scale industry event in London, United Kingdom. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc), photo [1](https://twitter.com/decredproject/status/986642982194495488) [2](https://twitter.com/NoahPierau/status/987115181024141312) [3](https://twitter.com/NoahPierau/status/986925002833514497))
+Blockchain Expo in London, UK. Decred was well represented at this large-scale industry event. Project Lead Jake took part in several interview and the Decred stand manned by community members was flooded with inquisitive visitors. ([video](https://www.pscp.tv/w/baimBTFXZ0tncUxubUxBRXZ8MWxEeExhYXBYWFFLbaBXRYqX7GSffVzoQEeMeIF16G7BLG9ZY809CKY0y6Wc), photo [1](https://twitter.com/decredproject/status/986642982194495488) [2](https://twitter.com/NoahPierau/status/987115181024141312) [3](https://twitter.com/NoahPierau/status/986925002833514497))
 
-First Decred meet-up in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
+First Decred meetup in Hangzhou, China. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524305444000073))
 
-Blockchain Sovereignty and Blockchain Integration for Businesses by Jake Yocom-Piatt at MIT Media Lab. ([event](https://events.technologyreview.com/presents/business-of-blockchain/2018), [reddit](https://www.reddit.com/r/decred/comments/8eds35/decred_team_at_the_mit_business_of_blockchain/), photo [1](https://twitter.com/DeCredBAB/status/988421816522891264) [2](https://twitter.com/DeCredBAB/status/988469881371799552) [3](https://twitter.com/marco_peereboom/status/988492457896742913))
+Business of Blockchain at MIT Media Lab in Cambridge, USA. Presentation: Blockchain Sovereignty and Blockchain Integration for Businesses by Jake Yocom-Piatt. ([event](https://events.technologyreview.com/presents/business-of-blockchain/2018), [reddit](https://www.reddit.com/r/decred/comments/8eds35/decred_team_at_the_mit_business_of_blockchain/), photo [1](https://twitter.com/DeCredBAB/status/988421816522891264) [2](https://twitter.com/DeCredBAB/status/988469881371799552) [3](https://twitter.com/marco_peereboom/status/988492457896742913))
 
-Cutting the Head off the Snake by Jake Yocom-Piatt, hosted by the Cambridge Blockchain Meetup. ([event](https://www.meetup.com/Cambridge-Blockchain/events/249275574/))
+Cambridge Blockchain Meetup in Cambridge, USA. Talk: Cutting the Head off the Snake by Jake Yocom-Piatt. ([event](https://www.meetup.com/Cambridge-Blockchain/events/249275574/), photo [1](https://twitter.com/DeCredBAB/status/988925370895405058) [2](https://twitter.com/TunnelMoney/status/988927248911790081) [3](https://twitter.com/blockchainwk/status/988936192187092992))
 
 Upcoming events:
 
