Minor fixes in ASIC section

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -23,13 +23,13 @@ Updates from Obelisk's Taek:
 > There's a decent chance that the full bga chips perform better\
 > For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203), Apr 12)
 
-Thank you for updating us on our own #pow-mining channel, let's hope more manufacturer representatives follow.
+Thank you for updating us on our #pow-mining channel, let's hope other ASIC manufacturers also join.
 
 > We're still on track for batch 1. We've ordered most of the parts we'll need, including the chips. We've got working chips, we've got test boards, test units, test everything. We've signed manufacturers to produce everything. Obelisk is going strong. ([reddit](https://www.reddit.com/r/siacoin/comments/8edjy8/obelisk_batch_1_updates/dxuoayz/), Apr 23)
 
 Fellow Sia miners are [discussing](https://www.reddit.com/r/siacoin/comments/8eo1x5/first_look_at_obelisk_unit/) the design of Obelisk SC1 case.
 
-Halong: B29 units are reportedly shipping. The amount of units in first batch was estimated 450-600 by our community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) unboxing and shipping.
+Halong: B29 units are shipping. The amount of units in first batch was estimated 450-600 by our community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) shipping and running the miners.
 
 By surprise Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company maintains their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
 
