--- a/posts/201804.md
+++ b/posts/201804.md
@@ -23,15 +23,15 @@ Updates from Obelisk's Taek:
 > There's a decent chance that the full bga chips perform better\
 > For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203), Apr 12)
 
-Thank you for updating us on our own #pow-mining channel, let's hope more manufacturer representatives follow.
+Thank you for updating us on our #pow-mining channel, let's hope other ASIC manufacturers also join.
 
 > We're still on track for batch 1. We've ordered most of the parts we'll need, including the chips. We've got working chips, we've got test boards, test units, test everything. We've signed manufacturers to produce everything. Obelisk is going strong. ([reddit](https://www.reddit.com/r/siacoin/comments/8edjy8/obelisk_batch_1_updates/dxuoayz/), Apr 23)
 
 Fellow Sia miners are [discussing](https://www.reddit.com/r/siacoin/comments/8eo1x5/first_look_at_obelisk_unit/) the design of Obelisk SC1 case.
 
-Halong: B29 units are reportedly shipping. The amount of units in first batch was estimated 450-600 by our community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) unboxing and shipping.
+Halong: B29 units are shipping. The amount of units in first batch was estimated 450-600 by our community member. Review of DragonMint B29 [published](https://bitsonline.com/dragonmint-b29-blake-256-decred-miner/), people are [discussing](https://www.reddit.com/r/decred/comments/8a2vul/just_unboxed_my_dragonmint_b29s/) shipping and running the miners.
 
-By surprise Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company maintains their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
+By surprise Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company is active on their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
 
 Just 9 days later Innosilicon [announced](https://twitter.com/Inno_Miner/status/990117591141134336) second batch with delivery on May 7-11 and same price of $6800. At the same time Halong B29 is [available](https://halongmining.com/shop/dragonmint-b29-blake256-miner/) again, this time $200 cheaper than Inno and delivery May 21-30. ([reddit](https://www.reddit.com/r/decred/comments/8fk2ao/decred_miners_back_in_stock_from_inno_and/))
 
@@ -71,7 +71,7 @@ i2Rav announced a new [trading desk](https://i2trading.com/) that will be offeri
 
 > Eventually we hope to offer the pair in GBP and YEN as well
 
-Note that there is a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) with all known exchanges supporting Decred, many are absent from coinmarketcap.
+You can see all exchanges known to support Decred in a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) maintained by snr01. Many of them are absent from coinmarketcap.
 
 ## Adoption
 
