Add 1.2.1 bugfix release

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -2,7 +2,7 @@
 
 ## Development
 
-Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0).
+Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0). Note: for Decrediton use [1.2.1](https://github.com/decred/decred-binaries/releases/tag/v1.2.1) bugfix release.
 
 The release process has seen an introduction of Release Candidates. It used to be: announce release date, rush to meet it and miss bugs. Now it is: don't call release date, post Release Candidate 1 (RC1) and let people start testing it, fix bugs and release RC2, repeat. An RC version with no apparent bugs becomes the final release. This new process removes a ton of pressure from developers and users and gives more time for testing. As our primary consumer-facing product, Decrediton, is growing in features and complexity, more testing will be required for new releases.
 
