Add help welcome, minor fix

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -2,7 +2,7 @@
 
 ## Development
 
-Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0). Note: for Decrediton use [1.2.1](https://github.com/decred/decred-binaries/releases/tag/v1.2.1) bugfix release.
+Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0), for Decrediton use [1.2.1](https://github.com/decred/decred-binaries/releases/tag/v1.2.1) bugfix release.
 
 The release process has been improved. Instead of announcing a release date and trying to meet it, a Release Candidate 1 (RC1) will now be posted. After it has been tested an bugfixed with the help of the community, a second candidate (RC2) will be released. This is repeated until an RC version with no apparent bugs becomes the final release. The new process removes a ton of pressure from developers and users and gives more time for testing. As our primary consumer-facing product, Decrediton, is growing in features and complexity, more testing will be required for new releases.
 
@@ -197,6 +197,6 @@ ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and
 
 This update was motivated by the desire to expose just how much is happening in Decred and save the time for people unable to actively follow our channels. It aims to cover all relevant developments with a short description and links to read further. It shows the depth of the project and the involvement of the community. We also plan to launch a newsletter and consider a [shorter version](https://github.com/xaur/decred-news/issues/4) if there is such a demand.
 
-This is the first issue and feedback is welcome to discover what is best for our readers. Please [join](https://slack.decred.org/) our Slack and write us on [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/) or comment directly on [GitHub](https://github.com/xaur/decred-news/issues).
+This is the first issue and feedback is welcome to discover what is best for our readers. Please [join](https://slack.decred.org/) our Slack and write us on [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/) or comment directly on [GitHub](https://github.com/xaur/decred-news/issues). Any [help](https://github.com/xaur/decred-news/issues/2) is welcome too.
 
 Credits (Slack names, alphabetical order): bee, jazzah, Richard-Red, snr01 and vj.
