Fix contributors text

--- a/posts/201804.md
+++ b/posts/201804.md
@@ -14,7 +14,7 @@ Trezor support advanced with Decred PR [merged](https://github.com/trezor/trezor
 
 WooCommerce [Decred plugin](https://github.com/xifrat/decred-woocommerce-plugin) alpha version is ready for testing.
 
-Plenty of new [contributors](https://www.decred.org/contributors/) have joined the project this month.
+The [contributors](https://www.decred.org/contributors/) page has been updated to add 10 new faces. Some of them are new to the project but others have been contributing for a while.
 
 Dev activity stats for April: 152 active PRs, 125 commits, 21,656 added and 10,288 deleted lines spread across 7 repositories done by 2-7 developers per repository. ([chart](https://twitter.com/decredproject/status/991734153631563776))
 
